--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width,initial-scale=1" />
-  <title>Mã hoá AES-256-GCM (v3)</title>
+  <title>Mã Hoá AES-256-GCM</title>
   <style>
     :root{
       --bg:#0b0b0f;
