--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
 <body>
   <div class="box">
     <div class="top">
-      <h1>Mã hoá AES-256-GCM (v3)</h1>
+      <h1>Mã Hoá AES-256-GCM</h1>
       <div class="right">
         <button id="btnSafe" class="pillbtn">BẢO MẬT AN TOÀN: TẮT</button>
       </div>
