--- a/index.html
+++ b/index.html
@@ -88,13 +88,13 @@
     </div>
 
     <div class="row">
-      <input id="plain" placeholder="Văn bản gốc (plaintext)" value="" autocomplete="off" />
+      <input id="plain" placeholder="Văn bản gốc" value="" autocomplete="off" />
       <input id="iters" class="mini" type="number" value="600000" min="100000" step="100000" inputmode="numeric" />
     </div>
 
     <div class="row">
       <div class="pwwrap">
-        <input id="pass" type="password" placeholder="Mật khẩu (PASS)" autocomplete="new-password" />
+        <input id="pass" type="password" placeholder="Mật khẩu" autocomplete="new-password" />
         <button id="btnTogglePass" class="pwbtn">HIỆN</button>
       </div>
       <button id="btnEnc" class="iconbtn">MÃ HOÁ</button>
