--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
     </div>
 
     <div class="row">
-      <input id="plain" placeholder="Văn bản gốc" value="" autocomplete="off" />
+      <input id="plain" placeholder="Văn bản gốc." value="" autocomplete="off" />
       <input id="iters" class="mini" type="number" value="600000" min="100000" step="100000" inputmode="numeric" />
     </div>
 
