--- a/index.html
+++ b/index.html
@@ -29,24 +29,31 @@
       backdrop-filter: blur(6px);
     }
 
-    /* Header giống ảnh: trái title, phải pill */
+    /* HEADER: fix chồng chữ trên mobile */
     .top{
       display:flex;
       align-items:center;
       justify-content:space-between;
       gap:12px;
       margin-bottom:12px;
+      flex-wrap:wrap;
     }
     h1{
       margin:0;
       font-size:16px;
       letter-spacing:.2px;
       opacity:.92;
-      white-space:nowrap;          /* 1) title 1 dòng */
-      flex: 1 1 auto;
-      min-width: 0;
+      white-space:nowrap;     /* yêu cầu của bạn: title 1 dòng */
+      flex:1 1 220px;
+      min-width:220px;
     }
-    .right{flex:0 0 auto; display:flex; justify-content:flex-end}
+    .right{
+      flex:0 0 auto;
+      max-width:100%;
+      margin-left:auto;
+      display:flex;
+      justify-content:flex-end;
+    }
     .pillbtn{
       padding:8px 12px;
       border-radius:999px;
@@ -56,10 +63,20 @@
       font-size:12px;
       cursor:pointer;
       white-space:nowrap;
+      max-width:100%;
     }
 
-    /* Row + controls */
     .row{display:flex;gap:10px;flex-wrap:wrap;margin:10px 0}
+
+    /* 2 nút ngang nhau, luôn đều */
+    .two{
+      display:grid;
+      grid-template-columns:1fr 1fr;
+      gap:10px;
+      width:100%;
+    }
+    .two > button{width:100%}
+
     input,textarea,button{
       border-radius:12px;
       border:1px solid var(--line);
@@ -74,16 +91,7 @@
     button{cursor:pointer;user-select:none}
     button:active{transform:translateY(1px)}
 
-    /* giữ iterations trông như ô riêng, giống ảnh */
     .mini{flex:0;min-width:190px}
-
-    /* 2 nút ngang nhau, giống ảnh */
-    .two{
-      display:grid;
-      grid-template-columns: 1fr 1fr;
-      gap:10px;
-    }
-    .two > button{width:100%}
 
     .pwwrap{display:flex;gap:10px;flex:1;min-width:260px}
     .pwwrap input{flex:1;min-width:0}
@@ -106,13 +114,14 @@
       filter:saturate(.8);
     }
 
-    /* Mobile fix: đảm bảo không bị gãy layout */
-    @media (max-width: 420px){
+    /* Mobile tuning */
+    @media (max-width: 430px){
+      h1{flex:1 1 100%; min-width:0}     /* title xuống 1 dòng riêng */
+      .right{width:100%; justify-content:flex-end} /* pill xuống dòng, nằm bên phải */
       input,textarea{min-width:0}
       .mini{min-width:0;flex:1}
       .pwbtn{min-width:110px}
       .pwwrap{min-width:0}
-      .top{gap:10px}
     }
   </style>
 </head>
@@ -127,7 +136,6 @@
 
     <div class="row">
       <input id="plain" placeholder="Văn bản gốc" value="" autocomplete="off" />
-      <!-- 2) mặc định 100000 -->
       <input id="iters" class="mini" type="number" value="100000" min="100000" step="100000" inputmode="numeric" />
     </div>
 
@@ -138,7 +146,6 @@
       </div>
     </div>
 
-    <!-- 3) MÃ HOÁ + GIẢI MÃ ngang nhau (đúng như ảnh) -->
     <div class="row two">
       <button id="btnEnc">MÃ HOÁ</button>
       <button id="btnDec">GIẢI MÃ</button>
@@ -148,7 +155,6 @@
       <textarea id="token" spellcheck="false" placeholder="Token mã hoá"></textarea>
     </div>
 
-    <!-- 4) SAO CHÉP + XOÁ ngang nhau + đổi tên -->
     <div class="row two">
       <button id="btnCopy">SAO CHÉP</button>
       <button id="btnClear">XOÁ</button>
