--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width,initial-scale=1" />
-  <title>Mã Hoá AES-256-GCM</title>
+  <title>AES-256-GCM</title>
   <style>
     :root{
       --bg:#0b0b0f;
@@ -128,7 +128,7 @@
 <body>
   <div class="box">
     <div class="top">
-      <h1>Mã Hoá AES-256-GCM</h1>
+      <h1>AES-256-GCM</h1>
       <div class="right">
         <button id="btnSafe" class="pillbtn">BẢO MẬT AN TOÀN: TẮT</button>
       </div>
