--- a/index.html
+++ b/index.html
@@ -130,7 +130,7 @@
     <div class="top">
       <h1>AES-256-GCM</h1>
       <div class="right">
-        <button id="btnSafe" class="pillbtn">BẢO MẬT AN TOÀN: TẮT</button>
+        <button id="btnSafe" class="pillbtn">BẢO MẬT: TẮT</button>
       </div>
     </div>
 
