--- a/index.html
+++ b/index.html
@@ -9,27 +9,73 @@
       --bg:#0b0b0f;
       --fg:#f5f5f7;
       --line:rgba(255,255,255,.12);
-      --panel:rgba(255,255,255,.04);
-      --field:rgba(0,0,0,.25);
+      --panel:rgba(255,255,255,.045);
+      --field:rgba(0,0,0,.24);
       --shadow:rgba(0,0,0,.65);
+      --g1:rgba(124,58,237,.45);
+      --g2:rgba(34,211,238,.35);
+      --g3:rgba(99,102,241,.28);
+      --ring:rgba(255,255,255,.18);
     }
     *{box-sizing:border-box}
+    html,body{height:100%}
     body{
       margin:0;min-height:100vh;
       display:flex;align-items:center;justify-content:center;
-      background:var(--bg);color:var(--fg);
+      background:radial-gradient(1100px 680px at 18% 20%, rgba(124,58,237,.22), transparent 55%),
+                 radial-gradient(900px 520px at 85% 22%, rgba(34,211,238,.18), transparent 55%),
+                 radial-gradient(900px 620px at 55% 92%, rgba(99,102,241,.16), transparent 55%),
+                 var(--bg);
+      color:var(--fg);
       font-family:system-ui,-apple-system,Segoe UI,Roboto,Helvetica,Arial;
+      overflow:hidden;
     }
+    body::before{
+      content:"";
+      position:fixed;inset:-40%;
+      background:conic-gradient(from 220deg, rgba(124,58,237,.10), rgba(34,211,238,.08), rgba(99,102,241,.09), rgba(124,58,237,.10));
+      filter:blur(60px);
+      opacity:.85;
+      animation:spin 18s linear infinite;
+      pointer-events:none;
+    }
+    body::after{
+      content:"";
+      position:fixed;inset:0;
+      background:radial-gradient(1px 1px at 20% 30%, rgba(255,255,255,.10), transparent 60%),
+                 radial-gradient(1px 1px at 70% 20%, rgba(255,255,255,.08), transparent 60%),
+                 radial-gradient(1px 1px at 55% 75%, rgba(255,255,255,.07), transparent 60%),
+                 radial-gradient(1px 1px at 35% 85%, rgba(255,255,255,.06), transparent 60%);
+      opacity:.45;
+      pointer-events:none;
+      filter:blur(.2px);
+    }
+    @keyframes spin{to{transform:rotate(360deg)}}
+
     .box{
+      position:relative;
       width:min(980px,92vw);
       padding:24px;
       border:1px solid var(--line);
-      border-radius:16px;
-      background:var(--panel);
-      backdrop-filter: blur(6px);
+      border-radius:18px;
+      background:linear-gradient(180deg, rgba(255,255,255,.055), rgba(255,255,255,.028));
+      box-shadow:0 22px 60px rgba(0,0,0,.55);
+      backdrop-filter: blur(10px);
+      z-index:1;
+    }
+    .box::before{
+      content:"";
+      position:absolute;inset:-1px;
+      border-radius:18px;
+      padding:1px;
+      background:linear-gradient(135deg, rgba(124,58,237,.35), rgba(34,211,238,.22), rgba(99,102,241,.25));
+      -webkit-mask:linear-gradient(#000 0 0) content-box, linear-gradient(#000 0 0);
+      -webkit-mask-composite:xor;
+      mask-composite:exclude;
+      pointer-events:none;
+      opacity:.55;
     }
 
-    /* Header: luôn cùng hàng, cân với pill */
     .top{
       display:flex;
       align-items:center;
@@ -42,7 +88,7 @@
       margin:0;
       font-size:16px;
       letter-spacing:.2px;
-      opacity:.92;
+      opacity:.94;
       flex:1 1 auto;
       min-width:0;
       white-space:nowrap;
@@ -56,21 +102,29 @@
       display:flex;
       justify-content:flex-end;
     }
+
     .pillbtn{
       padding:8px 12px;
       border-radius:999px;
       border:1px solid var(--line);
-      background:rgba(0,0,0,.18);
-      color:rgba(245,245,247,.9);
+      background:
+        radial-gradient(120% 160% at 20% 10%, rgba(124,58,237,.18), transparent 60%),
+        radial-gradient(120% 160% at 90% 0%, rgba(34,211,238,.12), transparent 60%),
+        rgba(0,0,0,.16);
+      color:rgba(245,245,247,.92);
       font-size:12px;
       cursor:pointer;
       white-space:nowrap;
       max-width:100%;
+      transition:transform .14s ease, border-color .18s ease, box-shadow .18s ease, filter .18s ease;
+      box-shadow:0 10px 22px rgba(0,0,0,.35);
     }
+    .pillbtn:hover{border-color:var(--ring);filter:brightness(1.06)}
+    .pillbtn:active{transform:translateY(1px) scale(.99)}
+    .pillbtn:focus-visible{outline:none;box-shadow:0 0 0 3px rgba(124,58,237,.25), 0 10px 22px rgba(0,0,0,.35)}
 
     .row{display:flex;gap:10px;flex-wrap:wrap;margin:10px 0}
 
-    /* 2 nút ngang nhau */
     .two{
       display:grid;
       grid-template-columns:1fr 1fr;
@@ -80,48 +134,78 @@
     .two > button{width:100%}
 
     input,textarea,button{
-      border-radius:12px;
+      border-radius:14px;
       border:1px solid var(--line);
-      background:var(--field);
+      background:
+        radial-gradient(120% 160% at 10% 0%, rgba(124,58,237,.10), transparent 55%),
+        radial-gradient(120% 160% at 90% 0%, rgba(34,211,238,.08), transparent 55%),
+        var(--field);
       color:var(--fg);
       padding:12px 14px;
       font-size:14px;
       outline:none;
+      transition:border-color .16s ease, box-shadow .16s ease, transform .14s ease, filter .16s ease;
     }
     input,textarea{flex:1;min-width:240px}
     textarea{width:100%;min-height:140px;resize:vertical;line-height:1.35}
-    button{cursor:pointer;user-select:none}
-    button:active{transform:translateY(1px)}
+    input:focus,textarea:focus{
+      border-color:var(--ring);
+      box-shadow:0 0 0 3px rgba(34,211,238,.12);
+      filter:brightness(1.05);
+    }
+
+    button{
+      cursor:pointer;
+      user-select:none;
+      letter-spacing:.2px;
+      font-weight:650;
+      background:
+        radial-gradient(120% 200% at 20% 0%, rgba(124,58,237,.22), transparent 60%),
+        radial-gradient(120% 200% at 90% 0%, rgba(34,211,238,.16), transparent 60%),
+        rgba(0,0,0,.18);
+      box-shadow:0 14px 28px rgba(0,0,0,.40);
+    }
+    button:hover{border-color:var(--ring);filter:brightness(1.06)}
+    button:active{transform:translateY(1px) scale(.99)}
+    button:focus-visible{outline:none;box-shadow:0 0 0 3px rgba(124,58,237,.22), 0 14px 28px rgba(0,0,0,.40)}
 
     .mini{flex:0;min-width:190px}
-
     .pwwrap{display:flex;gap:10px;flex:1;min-width:260px}
     .pwwrap input{flex:1;min-width:0}
     .pwbtn{flex:0;min-width:120px}
 
     .toast{
       position:fixed;left:50%;bottom:28px;transform:translateX(-50%);
-      background:rgba(0,0,0,.78);
+      background:
+        radial-gradient(140% 220% at 20% 0%, rgba(124,58,237,.22), transparent 60%),
+        radial-gradient(140% 220% at 90% 0%, rgba(34,211,238,.18), transparent 60%),
+        rgba(0,0,0,.78);
       border:1px solid rgba(255,255,255,.16);
       padding:10px 14px;border-radius:12px;
       font-size:13px;opacity:0;pointer-events:none;
-      transition:opacity .18s ease;
+      transition:opacity .18s ease, transform .18s ease, filter .18s ease;
       box-shadow:0 12px 26px var(--shadow);
+      z-index:3;
     }
-    .toast.show{opacity:1}
+    .toast.show{opacity:1;transform:translateX(-50%) translateY(-2px);filter:brightness(1.05)}
 
     .disabled{
       opacity:.45;
       pointer-events:none;
-      filter:saturate(.8);
+      filter:saturate(.75) brightness(.95);
     }
 
-    /* Mobile */
     @media (max-width: 420px){
       input,textarea{min-width:0}
       .mini{min-width:0;flex:1}
       .pwbtn{min-width:110px}
       .pwwrap{min-width:0}
+      .box{padding:20px}
+    }
+
+    @media (prefers-reduced-motion: reduce){
+      body::before{animation:none}
+      *{transition:none !important}
     }
   </style>
 </head>
