--- a/index.html
+++ b/index.html
@@ -6,51 +6,82 @@
   <title>AES-256-GCM</title>
   <style>
     :root{
-      --bg:#0b0b0f;
+      --bg:#07070b;
       --fg:#f5f5f7;
-      --line:rgba(255,255,255,.12);
+      --line:rgba(255,255,255,.11);
       --panel:rgba(255,255,255,.045);
-      --field:rgba(0,0,0,.24);
-      --shadow:rgba(0,0,0,.65);
-      --g1:rgba(124,58,237,.45);
-      --g2:rgba(34,211,238,.35);
-      --g3:rgba(99,102,241,.28);
-      --ring:rgba(255,255,255,.18);
+      --field:rgba(0,0,0,.26);
+      --shadow:rgba(0,0,0,.70);
+      --ring:rgba(160,220,255,.20);
+      --c1:rgba(0,224,255,.55);
+      --c2:rgba(0,132,255,.42);
+      --c3:rgba(88,76,255,.40);
+      --c4:rgba(0,255,204,.28);
+      --glow:rgba(0,224,255,.16);
     }
     *{box-sizing:border-box}
     html,body{height:100%}
     body{
       margin:0;min-height:100vh;
       display:flex;align-items:center;justify-content:center;
-      background:radial-gradient(1100px 680px at 18% 20%, rgba(124,58,237,.22), transparent 55%),
-                 radial-gradient(900px 520px at 85% 22%, rgba(34,211,238,.18), transparent 55%),
-                 radial-gradient(900px 620px at 55% 92%, rgba(99,102,241,.16), transparent 55%),
-                 var(--bg);
+      background:var(--bg);
       color:var(--fg);
       font-family:system-ui,-apple-system,Segoe UI,Roboto,Helvetica,Arial;
       overflow:hidden;
     }
-    body::before{
-      content:"";
-      position:fixed;inset:-40%;
-      background:conic-gradient(from 220deg, rgba(124,58,237,.10), rgba(34,211,238,.08), rgba(99,102,241,.09), rgba(124,58,237,.10));
-      filter:blur(60px);
-      opacity:.85;
-      animation:spin 18s linear infinite;
+
+    .bg{
+      position:fixed;inset:-25%;
       pointer-events:none;
+      z-index:0;
+      filter:blur(54px);
+      opacity:.95;
+      background:
+        radial-gradient(900px 700px at 20% 20%, rgba(0,224,255,.14), transparent 55%),
+        radial-gradient(820px 620px at 84% 24%, rgba(0,132,255,.12), transparent 55%),
+        radial-gradient(900px 760px at 50% 90%, rgba(88,76,255,.10), transparent 60%),
+        radial-gradient(680px 520px at 10% 80%, rgba(0,255,204,.08), transparent 60%),
+        conic-gradient(from 200deg, rgba(0,224,255,.08), rgba(0,132,255,.06), rgba(88,76,255,.06), rgba(0,255,204,.05), rgba(0,224,255,.08));
+      animation: bgShift 14s ease-in-out infinite alternate;
+      transform:translate3d(0,0,0);
     }
-    body::after{
-      content:"";
+    .bg2{
+      position:fixed;inset:-30%;
+      pointer-events:none;
+      z-index:0;
+      filter:blur(70px);
+      opacity:.55;
+      mix-blend-mode:screen;
+      background:
+        radial-gradient(700px 520px at 30% 35%, rgba(0,224,255,.10), transparent 60%),
+        radial-gradient(700px 520px at 70% 65%, rgba(88,76,255,.08), transparent 62%),
+        conic-gradient(from 90deg, rgba(0,132,255,.06), rgba(0,255,204,.05), rgba(0,224,255,.05), rgba(0,132,255,.06));
+      animation: bgSpin 22s linear infinite;
+      transform:translate3d(0,0,0);
+    }
+    .grain{
       position:fixed;inset:0;
-      background:radial-gradient(1px 1px at 20% 30%, rgba(255,255,255,.10), transparent 60%),
-                 radial-gradient(1px 1px at 70% 20%, rgba(255,255,255,.08), transparent 60%),
-                 radial-gradient(1px 1px at 55% 75%, rgba(255,255,255,.07), transparent 60%),
-                 radial-gradient(1px 1px at 35% 85%, rgba(255,255,255,.06), transparent 60%);
-      opacity:.45;
       pointer-events:none;
-      filter:blur(.2px);
+      z-index:0;
+      opacity:.12;
+      background-image:url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='220' height='220'%3E%3Cfilter id='n'%3E%3CfeTurbulence type='fractalNoise' baseFrequency='.9' numOctaves='3' stitchTiles='stitch'/%3E%3C/filter%3E%3Crect width='220' height='220' filter='url(%23n)' opacity='.55'/%3E%3C/svg%3E");
+      mix-blend-mode:overlay;
     }
-    @keyframes spin{to{transform:rotate(360deg)}}
+    .vignette{
+      position:fixed;inset:0;
+      pointer-events:none;
+      z-index:0;
+      background:radial-gradient(1200px 700px at 50% 45%, transparent 45%, rgba(0,0,0,.55) 78%, rgba(0,0,0,.78) 100%);
+    }
+
+    @keyframes bgShift{
+      0%{transform:translate(-1.5%, -1.2%) scale(1.02); filter:blur(54px)}
+      50%{transform:translate(1.2%, .6%) scale(1.04); filter:blur(60px)}
+      100%{transform:translate(-.6%, 1.3%) scale(1.03); filter:blur(56px)}
+    }
+    @keyframes bgSpin{
+      to{transform:rotate(360deg)}
+    }
 
     .box{
       position:relative;
@@ -58,22 +89,39 @@
       padding:24px;
       border:1px solid var(--line);
       border-radius:18px;
-      background:linear-gradient(180deg, rgba(255,255,255,.055), rgba(255,255,255,.028));
-      box-shadow:0 22px 60px rgba(0,0,0,.55);
-      backdrop-filter: blur(10px);
+      background:linear-gradient(180deg, rgba(255,255,255,.060), rgba(255,255,255,.026));
+      box-shadow:0 24px 66px rgba(0,0,0,.62);
+      backdrop-filter: blur(12px);
       z-index:1;
+      overflow:hidden;
     }
     .box::before{
       content:"";
       position:absolute;inset:-1px;
       border-radius:18px;
       padding:1px;
-      background:linear-gradient(135deg, rgba(124,58,237,.35), rgba(34,211,238,.22), rgba(99,102,241,.25));
+      background:linear-gradient(135deg, rgba(0,224,255,.34), rgba(0,132,255,.22), rgba(88,76,255,.22), rgba(0,255,204,.16));
       -webkit-mask:linear-gradient(#000 0 0) content-box, linear-gradient(#000 0 0);
       -webkit-mask-composite:xor;
       mask-composite:exclude;
       pointer-events:none;
+      opacity:.70;
+    }
+    .box::after{
+      content:"";
+      position:absolute;inset:-40% -30%;
+      background:
+        radial-gradient(500px 420px at 30% 20%, rgba(0,224,255,.18), transparent 60%),
+        radial-gradient(520px 460px at 80% 30%, rgba(0,132,255,.14), transparent 62%),
+        radial-gradient(520px 520px at 55% 85%, rgba(88,76,255,.12), transparent 65%);
+      filter:blur(34px);
       opacity:.55;
+      animation: panelGlow 10s ease-in-out infinite alternate;
+      pointer-events:none;
+    }
+    @keyframes panelGlow{
+      0%{transform:translate(-1.5%,-1%) scale(1.00)}
+      100%{transform:translate(1.2%,1.4%) scale(1.03)}
     }
 
     .top{
@@ -83,17 +131,20 @@
       gap:12px;
       margin-bottom:12px;
       flex-wrap:nowrap;
+      position:relative;
+      z-index:2;
     }
     h1{
       margin:0;
       font-size:16px;
       letter-spacing:.2px;
-      opacity:.94;
+      opacity:.95;
       flex:1 1 auto;
       min-width:0;
       white-space:nowrap;
       overflow:hidden;
       text-overflow:ellipsis;
+      text-shadow:0 0 22px rgba(0,224,255,.10);
     }
     .right{
       flex:0 0 auto;
@@ -108,22 +159,33 @@
       border-radius:999px;
       border:1px solid var(--line);
       background:
-        radial-gradient(120% 160% at 20% 10%, rgba(124,58,237,.18), transparent 60%),
-        radial-gradient(120% 160% at 90% 0%, rgba(34,211,238,.12), transparent 60%),
-        rgba(0,0,0,.16);
+        radial-gradient(120% 200% at 20% 0%, rgba(0,224,255,.18), transparent 60%),
+        radial-gradient(120% 200% at 90% 0%, rgba(88,76,255,.14), transparent 60%),
+        rgba(0,0,0,.18);
       color:rgba(245,245,247,.92);
       font-size:12px;
       cursor:pointer;
       white-space:nowrap;
       max-width:100%;
-      transition:transform .14s ease, border-color .18s ease, box-shadow .18s ease, filter .18s ease;
-      box-shadow:0 10px 22px rgba(0,0,0,.35);
+      transition:transform .14s ease, border-color .18s ease, box-shadow .18s ease, filter .18s ease, background-position .3s ease;
+      box-shadow:0 14px 28px rgba(0,0,0,.40);
+      position:relative;
+      overflow:hidden;
     }
-    .pillbtn:hover{border-color:var(--ring);filter:brightness(1.06)}
+    .pillbtn::after{
+      content:"";
+      position:absolute;inset:-2px;
+      background:linear-gradient(90deg, transparent, rgba(255,255,255,.12), transparent);
+      transform:translateX(-120%);
+      transition:transform .55s ease;
+      pointer-events:none;
+    }
+    .pillbtn:hover{border-color:var(--ring);filter:brightness(1.07)}
+    .pillbtn:hover::after{transform:translateX(120%)}
     .pillbtn:active{transform:translateY(1px) scale(.99)}
-    .pillbtn:focus-visible{outline:none;box-shadow:0 0 0 3px rgba(124,58,237,.25), 0 10px 22px rgba(0,0,0,.35)}
+    .pillbtn:focus-visible{outline:none;box-shadow:0 0 0 3px rgba(0,224,255,.18), 0 14px 28px rgba(0,0,0,.40)}
 
-    .row{display:flex;gap:10px;flex-wrap:wrap;margin:10px 0}
+    .row{display:flex;gap:10px;flex-wrap:wrap;margin:10px 0;position:relative;z-index:2}
 
     .two{
       display:grid;
@@ -137,9 +199,9 @@
       border-radius:14px;
       border:1px solid var(--line);
       background:
-        radial-gradient(120% 160% at 10% 0%, rgba(124,58,237,.10), transparent 55%),
-        radial-gradient(120% 160% at 90% 0%, rgba(34,211,238,.08), transparent 55%),
-        var(--field);
+        radial-gradient(140% 220% at 15% 0%, rgba(0,224,255,.12), transparent 58%),
+        radial-gradient(140% 220% at 95% 0%, rgba(88,76,255,.10), transparent 58%),
+        rgba(0,0,0,.22);
       color:var(--fg);
       padding:12px 14px;
       font-size:14px;
@@ -150,24 +212,36 @@
     textarea{width:100%;min-height:140px;resize:vertical;line-height:1.35}
     input:focus,textarea:focus{
       border-color:var(--ring);
-      box-shadow:0 0 0 3px rgba(34,211,238,.12);
-      filter:brightness(1.05);
+      box-shadow:0 0 0 3px rgba(0,224,255,.12);
+      filter:brightness(1.06);
     }
 
     button{
       cursor:pointer;
       user-select:none;
-      letter-spacing:.2px;
-      font-weight:650;
+      letter-spacing:.25px;
+      font-weight:700;
       background:
-        radial-gradient(120% 200% at 20% 0%, rgba(124,58,237,.22), transparent 60%),
-        radial-gradient(120% 200% at 90% 0%, rgba(34,211,238,.16), transparent 60%),
-        rgba(0,0,0,.18);
-      box-shadow:0 14px 28px rgba(0,0,0,.40);
+        linear-gradient(135deg, rgba(0,224,255,.16), rgba(0,132,255,.10), rgba(88,76,255,.12)),
+        radial-gradient(160% 260% at 20% 0%, rgba(0,224,255,.18), transparent 60%),
+        radial-gradient(160% 260% at 90% 0%, rgba(0,255,204,.10), transparent 62%),
+        rgba(0,0,0,.20);
+      box-shadow:0 16px 34px rgba(0,0,0,.46);
+      position:relative;
+      overflow:hidden;
     }
-    button:hover{border-color:var(--ring);filter:brightness(1.06)}
+    button::after{
+      content:"";
+      position:absolute;inset:-2px;
+      background:linear-gradient(90deg, transparent, rgba(255,255,255,.12), transparent);
+      transform:translateX(-120%);
+      transition:transform .55s ease;
+      pointer-events:none;
+    }
+    button:hover{border-color:var(--ring);filter:brightness(1.07)}
+    button:hover::after{transform:translateX(120%)}
     button:active{transform:translateY(1px) scale(.99)}
-    button:focus-visible{outline:none;box-shadow:0 0 0 3px rgba(124,58,237,.22), 0 14px 28px rgba(0,0,0,.40)}
+    button:focus-visible{outline:none;box-shadow:0 0 0 3px rgba(0,224,255,.18), 0 16px 34px rgba(0,0,0,.46)}
 
     .mini{flex:0;min-width:190px}
     .pwwrap{display:flex;gap:10px;flex:1;min-width:260px}
@@ -177,8 +251,8 @@
     .toast{
       position:fixed;left:50%;bottom:28px;transform:translateX(-50%);
       background:
-        radial-gradient(140% 220% at 20% 0%, rgba(124,58,237,.22), transparent 60%),
-        radial-gradient(140% 220% at 90% 0%, rgba(34,211,238,.18), transparent 60%),
+        radial-gradient(140% 240% at 20% 0%, rgba(0,224,255,.20), transparent 60%),
+        radial-gradient(140% 240% at 90% 0%, rgba(88,76,255,.16), transparent 60%),
         rgba(0,0,0,.78);
       border:1px solid rgba(255,255,255,.16);
       padding:10px 14px;border-radius:12px;
@@ -187,12 +261,12 @@
       box-shadow:0 12px 26px var(--shadow);
       z-index:3;
     }
-    .toast.show{opacity:1;transform:translateX(-50%) translateY(-2px);filter:brightness(1.05)}
+    .toast.show{opacity:1;transform:translateX(-50%) translateY(-2px);filter:brightness(1.06)}
 
     .disabled{
       opacity:.45;
       pointer-events:none;
-      filter:saturate(.75) brightness(.95);
+      filter:saturate(.70) brightness(.95);
     }
 
     @media (max-width: 420px){
@@ -204,12 +278,17 @@
     }
 
     @media (prefers-reduced-motion: reduce){
-      body::before{animation:none}
+      .bg,.bg2,.box::after{animation:none}
       *{transition:none !important}
     }
   </style>
 </head>
 <body>
+  <div class="bg"></div>
+  <div class="bg2"></div>
+  <div class="grain"></div>
+  <div class="vignette"></div>
+
   <div class="box">
     <div class="top">
       <h1>AES-256-GCM</h1>
@@ -311,8 +390,8 @@
 
       disableInSafeMode.forEach(id => setDisabled(id, true));
 
-      $("plain").placeholder = "Văn bản gốc (đã ẩn)";
-      $("out").placeholder = "Kết quả (đã ẩn)";
+      $("plain").placeholder = "Văn bản gốc";
+      $("out").placeholder = "Kết quả";
 
       toast("Đã bật bảo mật");
     } else {
