--- a/index.html
+++ b/index.html
@@ -13,11 +13,6 @@
       --field:rgba(0,0,0,.26);
       --shadow:rgba(0,0,0,.70);
       --ring:rgba(160,220,255,.20);
-      --c1:rgba(0,224,255,.55);
-      --c2:rgba(0,132,255,.42);
-      --c3:rgba(88,76,255,.40);
-      --c4:rgba(0,255,204,.28);
-      --glow:rgba(0,224,255,.16);
     }
     *{box-sizing:border-box}
     html,body{height:100%}
@@ -79,8 +74,31 @@
       50%{transform:translate(1.2%, .6%) scale(1.04); filter:blur(60px)}
       100%{transform:translate(-.6%, 1.3%) scale(1.03); filter:blur(56px)}
     }
-    @keyframes bgSpin{
-      to{transform:rotate(360deg)}
+    @keyframes bgSpin{to{transform:rotate(360deg)}}
+
+    .meteors{
+      position:fixed;inset:0;
+      pointer-events:none;
+      z-index:1;
+      overflow:hidden;
+    }
+    .meteor{
+      position:absolute;
+      top:var(--top);
+      left:var(--left);
+      width:var(--len);
+      height:2px;
+      transform:rotate(var(--rot));
+      background:linear-gradient(90deg, rgba(255,255,255,0), rgba(120,220,255,.95), rgba(255,255,255,.85));
+      filter:drop-shadow(0 0 10px rgba(0,224,255,.25));
+      opacity:0;
+      animation: meteorFly var(--dur) linear infinite;
+      animation-delay:var(--delay);
+    }
+    @keyframes meteorFly{
+      0%{transform:translate3d(0,0,0) rotate(var(--rot)); opacity:0}
+      6%{opacity:1}
+      100%{transform:translate3d(var(--dx), var(--dy), 0) rotate(var(--rot)); opacity:0}
     }
 
     .box{
@@ -92,7 +110,7 @@
       background:linear-gradient(180deg, rgba(255,255,255,.060), rgba(255,255,255,.026));
       box-shadow:0 24px 66px rgba(0,0,0,.62);
       backdrop-filter: blur(12px);
-      z-index:1;
+      z-index:2;
       overflow:hidden;
     }
     .box::before{
@@ -153,7 +171,6 @@
       display:flex;
       justify-content:flex-end;
     }
-
     .pillbtn{
       padding:8px 12px;
       border-radius:999px;
@@ -167,7 +184,7 @@
       cursor:pointer;
       white-space:nowrap;
       max-width:100%;
-      transition:transform .14s ease, border-color .18s ease, box-shadow .18s ease, filter .18s ease, background-position .3s ease;
+      transition:transform .14s ease, border-color .18s ease, box-shadow .18s ease, filter .18s ease;
       box-shadow:0 14px 28px rgba(0,0,0,.40);
       position:relative;
       overflow:hidden;
@@ -186,7 +203,6 @@
     .pillbtn:focus-visible{outline:none;box-shadow:0 0 0 3px rgba(0,224,255,.18), 0 14px 28px rgba(0,0,0,.40)}
 
     .row{display:flex;gap:10px;flex-wrap:wrap;margin:10px 0;position:relative;z-index:2}
-
     .two{
       display:grid;
       grid-template-columns:1fr 1fr;
@@ -278,7 +294,7 @@
     }
 
     @media (prefers-reduced-motion: reduce){
-      .bg,.bg2,.box::after{animation:none}
+      .bg,.bg2,.box::after,.meteor{animation:none}
       *{transition:none !important}
     }
   </style>
@@ -286,6 +302,20 @@
 <body>
   <div class="bg"></div>
   <div class="bg2"></div>
+
+  <div class="meteors" aria-hidden="true">
+    <span class="meteor" style="--top:10%;--left:-15%;--len:280px;--rot:22deg;--dx:140vw;--dy:55vh;--dur:2.2s;--delay:0.6s"></span>
+    <span class="meteor" style="--top:18%;--left:-25%;--len:220px;--rot:18deg;--dx:140vw;--dy:52vh;--dur:2.8s;--delay:2.6s"></span>
+    <span class="meteor" style="--top:28%;--left:-30%;--len:320px;--rot:20deg;--dx:150vw;--dy:60vh;--dur:2.4s;--delay:4.4s"></span>
+    <span class="meteor" style="--top:36%;--left:-20%;--len:260px;--rot:19deg;--dx:145vw;--dy:56vh;--dur:2.6s;--delay:6.2s"></span>
+    <span class="meteor" style="--top:44%;--left:-35%;--len:340px;--rot:21deg;--dx:160vw;--dy:66vh;--dur:2.3s;--delay:8.0s"></span>
+    <span class="meteor" style="--top:12%;--left:-40%;--len:200px;--rot:24deg;--dx:150vw;--dy:62vh;--dur:2.9s;--delay:10.3s"></span>
+    <span class="meteor" style="--top:22%;--left:-10%;--len:300px;--rot:17deg;--dx:135vw;--dy:48vh;--dur:2.5s;--delay:12.4s"></span>
+    <span class="meteor" style="--top:52%;--left:-45%;--len:360px;--rot:23deg;--dx:170vw;--dy:72vh;--dur:2.2s;--delay:14.2s"></span>
+    <span class="meteor" style="--top:60%;--left:-25%;--len:260px;--rot:20deg;--dx:150vw;--dy:62vh;--dur:2.7s;--delay:16.1s"></span>
+    <span class="meteor" style="--top:66%;--left:-35%;--len:320px;--rot:21deg;--dx:160vw;--dy:68vh;--dur:2.4s;--delay:18.0s"></span>
+  </div>
+
   <div class="grain"></div>
   <div class="vignette"></div>
 
