--- a/index.html
+++ b/index.html
@@ -6,99 +6,128 @@
   <title>AES-256-GCM</title>
   <style>
     :root{
-      --bg:#07070b;
+      --bg0:#05060a;
+      --bg1:#070913;
+      --bg2:#0b0e1e;
       --fg:#f5f5f7;
+      --muted:rgba(245,245,247,.78);
       --line:rgba(255,255,255,.11);
       --panel:rgba(255,255,255,.045);
-      --field:rgba(0,0,0,.26);
-      --shadow:rgba(0,0,0,.70);
-      --ring:rgba(160,220,255,.20);
+      --field:rgba(0,0,0,.28);
+      --shadow:rgba(0,0,0,.74);
+      --ring:rgba(210,230,255,.18);
     }
     *{box-sizing:border-box}
     html,body{height:100%}
     body{
       margin:0;min-height:100vh;
       display:flex;align-items:center;justify-content:center;
-      background:var(--bg);
+      background:radial-gradient(1200px 800px at 50% 35%, var(--bg2), var(--bg0) 65%);
       color:var(--fg);
       font-family:system-ui,-apple-system,Segoe UI,Roboto,Helvetica,Arial;
       overflow:hidden;
     }
 
-    .bg{
-      position:fixed;inset:-25%;
+    .sky{
+      position:fixed;inset:0;
       pointer-events:none;
       z-index:0;
-      filter:blur(54px);
+      background:
+        radial-gradient(900px 700px at 20% 20%, rgba(255,255,255,.05), transparent 55%),
+        radial-gradient(900px 700px at 82% 28%, rgba(255,255,255,.035), transparent 58%),
+        radial-gradient(1100px 800px at 50% 95%, rgba(255,255,255,.028), transparent 60%),
+        linear-gradient(180deg, var(--bg1), var(--bg0));
+      transform:translate3d(0,0,0);
+    }
+
+    .stars{
+      position:fixed;inset:-10%;
+      pointer-events:none;
+      z-index:1;
       opacity:.95;
       background:
-        radial-gradient(900px 700px at 20% 20%, rgba(0,224,255,.14), transparent 55%),
-        radial-gradient(820px 620px at 84% 24%, rgba(0,132,255,.12), transparent 55%),
-        radial-gradient(900px 760px at 50% 90%, rgba(88,76,255,.10), transparent 60%),
-        radial-gradient(680px 520px at 10% 80%, rgba(0,255,204,.08), transparent 60%),
-        conic-gradient(from 200deg, rgba(0,224,255,.08), rgba(0,132,255,.06), rgba(88,76,255,.06), rgba(0,255,204,.05), rgba(0,224,255,.08));
-      animation: bgShift 14s ease-in-out infinite alternate;
-      transform:translate3d(0,0,0);
+        radial-gradient(circle at 12% 18%, rgba(255,255,255,.9) 0 1px, transparent 2px),
+        radial-gradient(circle at 24% 72%, rgba(255,255,255,.7) 0 1px, transparent 2px),
+        radial-gradient(circle at 32% 28%, rgba(255,255,255,.8) 0 1px, transparent 2px),
+        radial-gradient(circle at 41% 62%, rgba(255,255,255,.75) 0 1px, transparent 2px),
+        radial-gradient(circle at 53% 18%, rgba(255,255,255,.85) 0 1px, transparent 2px),
+        radial-gradient(circle at 61% 48%, rgba(255,255,255,.65) 0 1px, transparent 2px),
+        radial-gradient(circle at 70% 78%, rgba(255,255,255,.78) 0 1px, transparent 2px),
+        radial-gradient(circle at 80% 34%, rgba(255,255,255,.72) 0 1px, transparent 2px),
+        radial-gradient(circle at 92% 60%, rgba(255,255,255,.8) 0 1px, transparent 2px),
+        radial-gradient(circle at 18% 46%, rgba(255,255,255,.6) 0 1px, transparent 2px),
+        radial-gradient(circle at 36% 86%, rgba(255,255,255,.7) 0 1px, transparent 2px),
+        radial-gradient(circle at 58% 84%, rgba(255,255,255,.62) 0 1px, transparent 2px),
+        radial-gradient(circle at 76% 12%, rgba(255,255,255,.7) 0 1px, transparent 2px),
+        radial-gradient(circle at 6% 62%, rgba(255,255,255,.6) 0 1px, transparent 2px);
+      filter:drop-shadow(0 0 10px rgba(255,255,255,.08));
+      animation: drift 36s linear infinite;
     }
-    .bg2{
-      position:fixed;inset:-30%;
+
+    .stars2{
+      position:fixed;inset:-15%;
       pointer-events:none;
-      z-index:0;
-      filter:blur(70px);
+      z-index:1;
       opacity:.55;
-      mix-blend-mode:screen;
       background:
-        radial-gradient(700px 520px at 30% 35%, rgba(0,224,255,.10), transparent 60%),
-        radial-gradient(700px 520px at 70% 65%, rgba(88,76,255,.08), transparent 62%),
-        conic-gradient(from 90deg, rgba(0,132,255,.06), rgba(0,255,204,.05), rgba(0,224,255,.05), rgba(0,132,255,.06));
-      animation: bgSpin 22s linear infinite;
-      transform:translate3d(0,0,0);
+        radial-gradient(circle at 10% 30%, rgba(255,255,255,.7) 0 1px, transparent 2px),
+        radial-gradient(circle at 20% 10%, rgba(255,255,255,.5) 0 1px, transparent 2px),
+        radial-gradient(circle at 30% 55%, rgba(255,255,255,.6) 0 1px, transparent 2px),
+        radial-gradient(circle at 45% 22%, rgba(255,255,255,.55) 0 1px, transparent 2px),
+        radial-gradient(circle at 57% 40%, rgba(255,255,255,.6) 0 1px, transparent 2px),
+        radial-gradient(circle at 68% 18%, rgba(255,255,255,.55) 0 1px, transparent 2px),
+        radial-gradient(circle at 78% 52%, rgba(255,255,255,.5) 0 1px, transparent 2px),
+        radial-gradient(circle at 88% 26%, rgba(255,255,255,.6) 0 1px, transparent 2px),
+        radial-gradient(circle at 16% 84%, rgba(255,255,255,.55) 0 1px, transparent 2px),
+        radial-gradient(circle at 52% 78%, rgba(255,255,255,.5) 0 1px, transparent 2px),
+        radial-gradient(circle at 84% 82%, rgba(255,255,255,.55) 0 1px, transparent 2px);
+      transform:scale(1.15);
+      filter:blur(.2px);
+      animation: drift2 58s linear infinite;
     }
+
+    @keyframes drift{
+      0%{transform:translate3d(0,0,0)}
+      100%{transform:translate3d(-4.5%, 3.5%, 0)}
+    }
+    @keyframes drift2{
+      0%{transform:scale(1.15) translate3d(0,0,0)}
+      100%{transform:scale(1.15) translate3d(4.2%, -3.2%, 0)}
+    }
+
+    .twinkle{
+      position:fixed;inset:0;
+      pointer-events:none;
+      z-index:2;
+      opacity:.38;
+      background:
+        radial-gradient(circle at 22% 34%, rgba(255,255,255,.9) 0 1px, transparent 3px),
+        radial-gradient(circle at 48% 22%, rgba(255,255,255,.85) 0 1px, transparent 3px),
+        radial-gradient(circle at 64% 58%, rgba(255,255,255,.9) 0 1px, transparent 3px),
+        radial-gradient(circle at 82% 18%, rgba(255,255,255,.85) 0 1px, transparent 3px),
+        radial-gradient(circle at 12% 76%, rgba(255,255,255,.85) 0 1px, transparent 3px);
+      filter:blur(.15px) drop-shadow(0 0 8px rgba(255,255,255,.12));
+      animation: tw 3.6s ease-in-out infinite alternate;
+    }
+    @keyframes tw{
+      0%{opacity:.18}
+      100%{opacity:.46}
+    }
+
     .grain{
       position:fixed;inset:0;
       pointer-events:none;
-      z-index:0;
-      opacity:.12;
+      z-index:2;
+      opacity:.10;
       background-image:url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='220' height='220'%3E%3Cfilter id='n'%3E%3CfeTurbulence type='fractalNoise' baseFrequency='.9' numOctaves='3' stitchTiles='stitch'/%3E%3C/filter%3E%3Crect width='220' height='220' filter='url(%23n)' opacity='.55'/%3E%3C/svg%3E");
       mix-blend-mode:overlay;
     }
+
     .vignette{
       position:fixed;inset:0;
       pointer-events:none;
-      z-index:0;
-      background:radial-gradient(1200px 700px at 50% 45%, transparent 45%, rgba(0,0,0,.55) 78%, rgba(0,0,0,.78) 100%);
-    }
-
-    @keyframes bgShift{
-      0%{transform:translate(-1.5%, -1.2%) scale(1.02); filter:blur(54px)}
-      50%{transform:translate(1.2%, .6%) scale(1.04); filter:blur(60px)}
-      100%{transform:translate(-.6%, 1.3%) scale(1.03); filter:blur(56px)}
-    }
-    @keyframes bgSpin{to{transform:rotate(360deg)}}
-
-    .meteors{
-      position:fixed;inset:0;
-      pointer-events:none;
-      z-index:1;
-      overflow:hidden;
-    }
-    .meteor{
-      position:absolute;
-      top:var(--top);
-      left:var(--left);
-      width:var(--len);
-      height:2px;
-      transform:rotate(var(--rot));
-      background:linear-gradient(90deg, rgba(255,255,255,0), rgba(120,220,255,.95), rgba(255,255,255,.85));
-      filter:drop-shadow(0 0 10px rgba(0,224,255,.25));
-      opacity:0;
-      animation: meteorFly var(--dur) linear infinite;
-      animation-delay:var(--delay);
-    }
-    @keyframes meteorFly{
-      0%{transform:translate3d(0,0,0) rotate(var(--rot)); opacity:0}
-      6%{opacity:1}
-      100%{transform:translate3d(var(--dx), var(--dy), 0) rotate(var(--rot)); opacity:0}
+      z-index:2;
+      background:radial-gradient(1100px 680px at 50% 45%, transparent 42%, rgba(0,0,0,.55) 78%, rgba(0,0,0,.78) 100%);
     }
 
     .box{
@@ -107,10 +136,13 @@
       padding:24px;
       border:1px solid var(--line);
       border-radius:18px;
-      background:linear-gradient(180deg, rgba(255,255,255,.060), rgba(255,255,255,.026));
-      box-shadow:0 24px 66px rgba(0,0,0,.62);
+      background:
+        radial-gradient(120% 180% at 10% 0%, rgba(255,255,255,.06), transparent 62%),
+        radial-gradient(120% 180% at 90% 0%, rgba(255,255,255,.04), transparent 62%),
+        linear-gradient(180deg, rgba(255,255,255,.055), rgba(255,255,255,.028));
+      box-shadow:0 26px 70px rgba(0,0,0,.62);
       backdrop-filter: blur(12px);
-      z-index:2;
+      z-index:3;
       overflow:hidden;
     }
     .box::before{
@@ -118,28 +150,28 @@
       position:absolute;inset:-1px;
       border-radius:18px;
       padding:1px;
-      background:linear-gradient(135deg, rgba(0,224,255,.34), rgba(0,132,255,.22), rgba(88,76,255,.22), rgba(0,255,204,.16));
+      background:linear-gradient(135deg, rgba(255,255,255,.16), rgba(255,255,255,.06), rgba(255,255,255,.10));
       -webkit-mask:linear-gradient(#000 0 0) content-box, linear-gradient(#000 0 0);
       -webkit-mask-composite:xor;
       mask-composite:exclude;
       pointer-events:none;
-      opacity:.70;
+      opacity:.58;
     }
     .box::after{
       content:"";
-      position:absolute;inset:-40% -30%;
+      position:absolute;inset:-35% -25%;
       background:
-        radial-gradient(500px 420px at 30% 20%, rgba(0,224,255,.18), transparent 60%),
-        radial-gradient(520px 460px at 80% 30%, rgba(0,132,255,.14), transparent 62%),
-        radial-gradient(520px 520px at 55% 85%, rgba(88,76,255,.12), transparent 65%);
+        radial-gradient(520px 420px at 30% 25%, rgba(255,255,255,.06), transparent 60%),
+        radial-gradient(520px 420px at 75% 35%, rgba(255,255,255,.045), transparent 62%),
+        radial-gradient(520px 520px at 55% 88%, rgba(255,255,255,.04), transparent 65%);
       filter:blur(34px);
       opacity:.55;
       animation: panelGlow 10s ease-in-out infinite alternate;
       pointer-events:none;
     }
     @keyframes panelGlow{
-      0%{transform:translate(-1.5%,-1%) scale(1.00)}
-      100%{transform:translate(1.2%,1.4%) scale(1.03)}
+      0%{transform:translate(-1.2%,-.8%) scale(1.00)}
+      100%{transform:translate(1.0%,1.2%) scale(1.03)}
     }
 
     .top{
@@ -156,13 +188,13 @@
       margin:0;
       font-size:16px;
       letter-spacing:.2px;
-      opacity:.95;
+      opacity:.96;
       flex:1 1 auto;
       min-width:0;
       white-space:nowrap;
       overflow:hidden;
       text-overflow:ellipsis;
-      text-shadow:0 0 22px rgba(0,224,255,.10);
+      text-shadow:0 0 18px rgba(255,255,255,.10);
     }
     .right{
       flex:0 0 auto;
@@ -176,31 +208,31 @@
       border-radius:999px;
       border:1px solid var(--line);
       background:
-        radial-gradient(120% 200% at 20% 0%, rgba(0,224,255,.18), transparent 60%),
-        radial-gradient(120% 200% at 90% 0%, rgba(88,76,255,.14), transparent 60%),
-        rgba(0,0,0,.18);
+        radial-gradient(120% 200% at 30% 0%, rgba(255,255,255,.07), transparent 60%),
+        radial-gradient(120% 200% at 85% 0%, rgba(255,255,255,.045), transparent 60%),
+        rgba(0,0,0,.22);
       color:rgba(245,245,247,.92);
       font-size:12px;
       cursor:pointer;
       white-space:nowrap;
       max-width:100%;
       transition:transform .14s ease, border-color .18s ease, box-shadow .18s ease, filter .18s ease;
-      box-shadow:0 14px 28px rgba(0,0,0,.40);
+      box-shadow:0 14px 28px rgba(0,0,0,.42);
       position:relative;
       overflow:hidden;
     }
     .pillbtn::after{
       content:"";
       position:absolute;inset:-2px;
-      background:linear-gradient(90deg, transparent, rgba(255,255,255,.12), transparent);
+      background:linear-gradient(90deg, transparent, rgba(255,255,255,.10), transparent);
       transform:translateX(-120%);
       transition:transform .55s ease;
       pointer-events:none;
     }
-    .pillbtn:hover{border-color:var(--ring);filter:brightness(1.07)}
+    .pillbtn:hover{border-color:var(--ring);filter:brightness(1.06)}
     .pillbtn:hover::after{transform:translateX(120%)}
     .pillbtn:active{transform:translateY(1px) scale(.99)}
-    .pillbtn:focus-visible{outline:none;box-shadow:0 0 0 3px rgba(0,224,255,.18), 0 14px 28px rgba(0,0,0,.40)}
+    .pillbtn:focus-visible{outline:none;box-shadow:0 0 0 3px rgba(220,235,255,.14), 0 14px 28px rgba(0,0,0,.42)}
 
     .row{display:flex;gap:10px;flex-wrap:wrap;margin:10px 0;position:relative;z-index:2}
     .two{
@@ -215,49 +247,50 @@
       border-radius:14px;
       border:1px solid var(--line);
       background:
-        radial-gradient(140% 220% at 15% 0%, rgba(0,224,255,.12), transparent 58%),
-        radial-gradient(140% 220% at 95% 0%, rgba(88,76,255,.10), transparent 58%),
-        rgba(0,0,0,.22);
+        radial-gradient(140% 220% at 20% 0%, rgba(255,255,255,.06), transparent 60%),
+        radial-gradient(140% 220% at 90% 0%, rgba(255,255,255,.035), transparent 62%),
+        rgba(0,0,0,.24);
       color:var(--fg);
       padding:12px 14px;
       font-size:14px;
       outline:none;
       transition:border-color .16s ease, box-shadow .16s ease, transform .14s ease, filter .16s ease;
     }
+    input::placeholder, textarea::placeholder{color:rgba(245,245,247,.55)}
     input,textarea{flex:1;min-width:240px}
     textarea{width:100%;min-height:140px;resize:vertical;line-height:1.35}
     input:focus,textarea:focus{
       border-color:var(--ring);
-      box-shadow:0 0 0 3px rgba(0,224,255,.12);
-      filter:brightness(1.06);
+      box-shadow:0 0 0 3px rgba(220,235,255,.11);
+      filter:brightness(1.05);
     }
 
     button{
       cursor:pointer;
       user-select:none;
       letter-spacing:.25px;
-      font-weight:700;
+      font-weight:750;
       background:
-        linear-gradient(135deg, rgba(0,224,255,.16), rgba(0,132,255,.10), rgba(88,76,255,.12)),
-        radial-gradient(160% 260% at 20% 0%, rgba(0,224,255,.18), transparent 60%),
-        radial-gradient(160% 260% at 90% 0%, rgba(0,255,204,.10), transparent 62%),
-        rgba(0,0,0,.20);
-      box-shadow:0 16px 34px rgba(0,0,0,.46);
+        linear-gradient(135deg, rgba(255,255,255,.08), rgba(255,255,255,.03), rgba(0,0,0,.10)),
+        radial-gradient(180% 260% at 22% 0%, rgba(255,255,255,.07), transparent 62%),
+        radial-gradient(180% 260% at 90% 0%, rgba(255,255,255,.04), transparent 64%),
+        rgba(0,0,0,.22);
+      box-shadow:0 16px 34px rgba(0,0,0,.48);
       position:relative;
       overflow:hidden;
     }
     button::after{
       content:"";
       position:absolute;inset:-2px;
-      background:linear-gradient(90deg, transparent, rgba(255,255,255,.12), transparent);
+      background:linear-gradient(90deg, transparent, rgba(255,255,255,.10), transparent);
       transform:translateX(-120%);
       transition:transform .55s ease;
       pointer-events:none;
     }
-    button:hover{border-color:var(--ring);filter:brightness(1.07)}
+    button:hover{border-color:var(--ring);filter:brightness(1.06)}
     button:hover::after{transform:translateX(120%)}
     button:active{transform:translateY(1px) scale(.99)}
-    button:focus-visible{outline:none;box-shadow:0 0 0 3px rgba(0,224,255,.18), 0 16px 34px rgba(0,0,0,.46)}
+    button:focus-visible{outline:none;box-shadow:0 0 0 3px rgba(220,235,255,.14), 0 16px 34px rgba(0,0,0,.48)}
 
     .mini{flex:0;min-width:190px}
     .pwwrap{display:flex;gap:10px;flex:1;min-width:260px}
@@ -267,17 +300,17 @@
     .toast{
       position:fixed;left:50%;bottom:28px;transform:translateX(-50%);
       background:
-        radial-gradient(140% 240% at 20% 0%, rgba(0,224,255,.20), transparent 60%),
-        radial-gradient(140% 240% at 90% 0%, rgba(88,76,255,.16), transparent 60%),
+        radial-gradient(140% 240% at 22% 0%, rgba(255,255,255,.08), transparent 60%),
+        radial-gradient(140% 240% at 90% 0%, rgba(255,255,255,.05), transparent 60%),
         rgba(0,0,0,.78);
       border:1px solid rgba(255,255,255,.16);
       padding:10px 14px;border-radius:12px;
       font-size:13px;opacity:0;pointer-events:none;
       transition:opacity .18s ease, transform .18s ease, filter .18s ease;
       box-shadow:0 12px 26px var(--shadow);
-      z-index:3;
+      z-index:4;
     }
-    .toast.show{opacity:1;transform:translateX(-50%) translateY(-2px);filter:brightness(1.06)}
+    .toast.show{opacity:1;transform:translateX(-50%) translateY(-2px);filter:brightness(1.04)}
 
     .disabled{
       opacity:.45;
@@ -294,30 +327,18 @@
     }
 
     @media (prefers-reduced-motion: reduce){
-      .bg,.bg2,.box::after,.meteor{animation:none}
+      .stars,.stars2,.twinkle,.box::after{animation:none}
       *{transition:none !important}
     }
   </style>
 </head>
 <body>
-  <div class="bg"></div>
-  <div class="bg2"></div>
-
-  <div class="meteors" aria-hidden="true">
-    <span class="meteor" style="--top:10%;--left:-15%;--len:280px;--rot:22deg;--dx:140vw;--dy:55vh;--dur:2.2s;--delay:0.6s"></span>
-    <span class="meteor" style="--top:18%;--left:-25%;--len:220px;--rot:18deg;--dx:140vw;--dy:52vh;--dur:2.8s;--delay:2.6s"></span>
-    <span class="meteor" style="--top:28%;--left:-30%;--len:320px;--rot:20deg;--dx:150vw;--dy:60vh;--dur:2.4s;--delay:4.4s"></span>
-    <span class="meteor" style="--top:36%;--left:-20%;--len:260px;--rot:19deg;--dx:145vw;--dy:56vh;--dur:2.6s;--delay:6.2s"></span>
-    <span class="meteor" style="--top:44%;--left:-35%;--len:340px;--rot:21deg;--dx:160vw;--dy:66vh;--dur:2.3s;--delay:8.0s"></span>
-    <span class="meteor" style="--top:12%;--left:-40%;--len:200px;--rot:24deg;--dx:150vw;--dy:62vh;--dur:2.9s;--delay:10.3s"></span>
-    <span class="meteor" style="--top:22%;--left:-10%;--len:300px;--rot:17deg;--dx:135vw;--dy:48vh;--dur:2.5s;--delay:12.4s"></span>
-    <span class="meteor" style="--top:52%;--left:-45%;--len:360px;--rot:23deg;--dx:170vw;--dy:72vh;--dur:2.2s;--delay:14.2s"></span>
-    <span class="meteor" style="--top:60%;--left:-25%;--len:260px;--rot:20deg;--dx:150vw;--dy:62vh;--dur:2.7s;--delay:16.1s"></span>
-    <span class="meteor" style="--top:66%;--left:-35%;--len:320px;--rot:21deg;--dx:160vw;--dy:68vh;--dur:2.4s;--delay:18.0s"></span>
-  </div>
-
-  <div class="grain"></div>
-  <div class="vignette"></div>
+  <div class="sky"></div>
+  <div class="stars" aria-hidden="true"></div>
+  <div class="stars2" aria-hidden="true"></div>
+  <div class="twinkle" aria-hidden="true"></div>
+  <div class="grain" aria-hidden="true"></div>
+  <div class="vignette" aria-hidden="true"></div>
 
   <div class="box">
     <div class="top">
