--- a/index.html
+++ b/index.html
@@ -72,30 +72,31 @@
       animation: pulse 7.5s ease-in-out infinite;
     }
 
-    .rain{
+    .snow{
       position:absolute; inset:0;
-      opacity:.55;
-      filter: drop-shadow(0 0 8px rgba(140,190,255,.12));
+      opacity:.85;
+      filter: drop-shadow(0 0 10px rgba(190,220,255,.10));
       transform: translateZ(0);
     }
 
-    .drop{
+    .flake{
       position:absolute;
       top:-12vh;
-      width:1px;
-      height:12vh;
-      background: linear-gradient(180deg, rgba(255,255,255,0), rgba(160,200,255,.55), rgba(255,255,255,0));
-      opacity:.0;
-      animation: fall var(--dur) linear var(--delay) infinite;
-      transform: translateZ(0);
+      width: var(--s);
+      height: var(--s);
+      border-radius: 999px;
+      background: radial-gradient(circle at 30% 30%, rgba(255,255,255,.95), rgba(255,255,255,.35) 55%, rgba(255,255,255,0) 72%);
+      opacity: var(--o);
+      animation: snowFall var(--dur) linear var(--delay) infinite;
       will-change: transform, opacity;
+      transform: translateZ(0);
+      filter: blur(var(--blur));
     }
 
-    @keyframes fall{
-      0%{transform: translate3d(0,-12vh,0); opacity:0}
-      10%{opacity:.55}
-      90%{opacity:.55}
-      100%{transform: translate3d(14vw,125vh,0); opacity:0}
+    @keyframes snowFall{
+      0%   { transform: translate3d(var(--x), -14vh, 0) scale(var(--k)); opacity: 0; }
+      8%   { opacity: var(--o); }
+      100% { transform: translate3d(calc(var(--x) + var(--dx)), 118vh, 0) scale(var(--k)); opacity: 0; }
     }
 
     @keyframes drift{
@@ -340,7 +341,7 @@
   <div class="sky" aria-hidden="true">
     <div class="stars"></div>
     <div class="haze"></div>
-    <div class="rain" id="rain"></div>
+    <div class="snow" id="snow"></div>
   </div>
 
   <div class="wrap">
@@ -448,7 +449,6 @@
   }
 
   let SAFE_MODE = false;
-
   const disableInSafeMode = ["plain","btnTogglePass","out"];
 
   function setDisabled(id, on){
@@ -704,28 +704,37 @@
     $("btnTogglePass").textContent = isPw ? "ẨN" : "HIỆN";
   }
 
-  function spawnRain(){
-    const host = $("rain");
+  function spawnSnow(){
+    const host = $("snow");
     host.innerHTML = "";
     const isMobile = matchMedia("(max-width: 520px)").matches;
-    const count = isMobile ? 48 : 72;
+    const count = isMobile ? 55 : 90;
 
     for (let i=0;i<count;i++){
-      const d = document.createElement("div");
-      d.className = "drop";
-      const left = Math.random() * 110;
-      const delay = Math.random() * 1.8;
-      const dur = 0.95 + Math.random() * 0.75;
-      const h = 9 + Math.random() * 14;
-      const tilt = 10 + Math.random() * 12;
+      const f = document.createElement("div");
+      f.className = "flake";
 
-      d.style.left = left + "vw";
-      d.style.height = h + "vh";
-      d.style.opacity = (0.22 + Math.random() * 0.35).toFixed(2);
-      d.style.setProperty("--delay", delay + "s");
-      d.style.setProperty("--dur", dur + "s");
-      d.style.transform = `rotate(${tilt}deg)`;
-      host.appendChild(d);
+      const x = (Math.random()*110 - 5).toFixed(2) + "vw";
+      const dx = (Math.random()*16 - 8).toFixed(2) + "vw";
+      const s = (1.2 + Math.random()*2.6).toFixed(2) + "px";
+      const k = (0.8 + Math.random()*0.9).toFixed(2);
+      const o = (0.18 + Math.random()*0.55).toFixed(2);
+
+      const delay = (Math.random()*3.0).toFixed(2) + "s";
+      const dur = (7.0 + Math.random()*8.5).toFixed(2) + "s";
+
+      const blur = (Math.random() < 0.65 ? 0 : (Math.random()*0.9).toFixed(2)) + "px";
+
+      f.style.setProperty("--x", x);
+      f.style.setProperty("--dx", dx);
+      f.style.setProperty("--s", s);
+      f.style.setProperty("--k", k);
+      f.style.setProperty("--o", o);
+      f.style.setProperty("--delay", delay);
+      f.style.setProperty("--dur", dur);
+      f.style.setProperty("--blur", blur);
+
+      host.appendChild(f);
     }
   }
 
@@ -740,10 +749,10 @@
     applySafeMode();
   });
 
-  spawnRain();
+  spawnSnow();
   window.addEventListener("resize", () => {
-    clearTimeout(window.__rainT);
-    window.__rainT = setTimeout(spawnRain, 160);
+    clearTimeout(window.__snowT);
+    window.__snowT = setTimeout(spawnSnow, 180);
   });
 
   applySafeMode();
